--- a/linters/nixpkgs-fmt/plugin.yaml
+++ b/linters/nixpkgs-fmt/plugin.yaml
@@ -13,4 +13,7 @@ lint:
           stdin: true
           formatter: true
       suggest_if: files_present
+      environment:
+        - name: PATH
+          list: ["${linter}/bin"]
       known_good_version: 1.3.0
